--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
+  "config": {
+    "ionic_webpack": "./config/webpack.config.js"
+  },
   "description": "An Ionic project"
 }
